syntax = "proto3";
package news;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "services/shared/events/proto/schemas/meta.proto";

enum Source {
    OTHER = 0;
    TELEGRAM = 1;
    TWITTER = 2;
}


message NewsMeta {
    int32 replies = 1;
    int32 views = 2;
    int32 reactions = 3;

    optional google.protobuf.Timestamp created_at = 4;
}


message News {
    optional meta.EventMeta event_meta = 1;

    Source source = 2;
    map<string, google.protobuf.Any> content = 3;
    NewsMeta meta = 4;
}
